@@ -186,6 +186,12 @@ if (isActionAccessible($guid, $connection2, '/modules/School Admin/attendanceSet
         $form->addRow()->addAlert(sprintf(__('Your current IP address (%1$s) is not included in the saved list.'), "<b>".$realIP."</b>"), 'warning')->setClass('standardWidth');
     }
 
+    $setting = getSettingByScope($connection2, 'Attendance', 'selfRegistrationRedirect', true);
+    $row = $form->addRow();
+        $row->addLabel($setting['name'], __($setting['nameDisplay']))->description(__($setting['description']));
+        $row->addYesNo($setting['name'])->selected($setting['value'])->isRequired();
+
+
     $row = $form->addRow()->addHeading(__('Attendance CLI'));
 
     $setting = getSettingByScope($connection2, 'Attendance', 'attendanceCLINotifyByRollGroup', true);
