@@ -94,16 +94,24 @@ if (isActionAccessible($guid, $connection2, '/modules/School Admin/attendanceSet
         $fail = true;
     }
 
-
     $studentSelfRegistrationIPAddresses = '';
     foreach (explode(',', $_POST['studentSelfRegistrationIPAddresses']) as $ipAddress) {
         $studentSelfRegistrationIPAddresses .= trim($ipAddress).',';
     }
     $studentSelfRegistrationIPAddresses = substr($studentSelfRegistrationIPAddresses, 0, -1);
-
     try {
         $data = array('value' => $studentSelfRegistrationIPAddresses);
         $sql = "UPDATE gibbonSetting SET value=:value WHERE scope='Attendance' AND name='studentSelfRegistrationIPAddresses'";
+        $result = $connection2->prepare($sql);
+        $result->execute($data);
+    } catch (PDOException $e) {
+        $fail = true;
+    }
+
+    $selfRegistrationRedirect = (isset($_POST['selfRegistrationRedirect'])) ? $_POST['selfRegistrationRedirect'] : NULL;
+    try {
+        $data = array('value' => $selfRegistrationRedirect);
+        $sql = "UPDATE gibbonSetting SET value=:value WHERE scope='Attendance' AND name='selfRegistrationRedirect'";
         $result = $connection2->prepare($sql);
         $result->execute($data);
     } catch (PDOException $e) {
